# Audo

./: .gitignore  Audo.pidaproject  Audo.pro  CMakeLists.txt  Makefile  README.md  TODO  buildTags.sh  default.supp  files  tags
notes/: SoundForgeFeatures  qmake
scripts/: check-header-guards.sh  makefile.sh  project.sh
src/: AudioReader.cpp  AudioReader.h  EditSubWindow.cpp  EditSubWindow.h  MDIArea.cpp  MDIArea.h  MainWindow.cpp  MainWindow.h  audo.cpp  aueditsubwindow.cpp  aueditsubwindow.h  aumainwindow.cpp  aumainwindow.h  aumdiarea.cpp  aumdiarea.h  auwavedisplay.cpp  auwavedisplay.h  buffer.cpp  buffer.h
src/controller/: ActionController.cpp  ActionController.h  FileNewController.cpp  FileNewController.h  FileOpenController.cpp  FileOpenController.h
src/gui/: Audo.cpp  EditSubWindow.cpp  EditSubWindow.h  MDIArea.h  MainWindow.cpp  MainWindow.h
src/input/: AudioReader.cpp  AudioReader.h
src/model/: ABuffer.cpp  ABuffer.h  AudoType.h  AudoTypeBase.cpp  AudoTypeBase.h  Buffer.cpp  Buffer.h  BufferPool.cpp  BufferPool.h  BufferRef.h  EmptyBuffer.cpp  EmptyBuffer.h  Ref.h  SampleInterval.h  SampleSource.cpp  SampleSource.h  SineWaveSamples.h  StandardBuffer.cpp  StandardBuffer.h  WritableBuffer.cpp  WritableBuffer.h
src/output/: .JackOut.cpp.swp  .JackOut.h.swp  .Output.h.swp  JackOut.cpp  JackOut.h  JackOutput.cpp  JackOutput.h  Output.cpp  Output.h
src/tests/: RefTest.cpp
src/util/: AudoTypes.h  singleton.h
src/util/log/: Logger.h  StreamLogger.h
src/view/: WaveDisplay.cpp  WaveDisplay.h
